--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Participated in navigation, vehicle control and decision making.
                   
                     <br>
                  
-                    <p class="about-text">Professional roles: Proficient in application designing, coding and troubleshooting: Unity C, Swift, Java, HTML5, CSS3, JavaScript(React JS, jQuery) Bootstrap, and including:  InVision, Sketch, Adobe Creative Cloud and user-centred design 
+                    <p class="about-text">Professional roles: Proficient in application designing, coding and troubleshooting:  C+, HTML5, CSS3/SASS, JavaScript(React JS, jQuery, TypeScript) Bootstrap, and including:  InVision, Sketch, Adobe Creative Cloud and user-centred design 
 to create unique
                         Mobile Apps and Progressive Web Apps. Translation of wireframes and rapid prototyping tools to accurate, working code and Frameworks. Performance Testing, Load Testing & Debugging,
                         Object-Oriented Programming. Agile Methodology & SCRUM, Content Management Systems (CMS). Experience of modern software engineering techniques e.g. Continuous Integration (CI), Version Control Systems (Subversion / Git, Code validation
