--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
  
                 <h2 style="color:white;"> <strong>Welcome to Kaiser A ÖzHun Resume page </strong></h2>
-                <h2>I create <span style="color:orange;" class="rotating">Beautiful UI, functional Ai app's, working mobile/web apps</span></h2>
+                <h2>I create <span style="color:orange;" class="rotating">Beautiful UI, functional AR app's, working mobile/web apps</span></h2>
                 <div class="actions">
                     <a href="#contact" class="btn-get-started">Contact Me</a>
                     <a href="https://www.linkedin.com/in/kaiser-a-özhun-89842313/" target="_blank" class="btn-services">LinkedIn</a>
