--- a/index.html
+++ b/index.html
@@ -106,27 +106,24 @@
                     <img src="img/about-img.jpg" alt="">
                     <br><br>
                       <h2 class="about-title">Great services and ideas</h2>
-                       <p class="about-text">I have experience designing, developing, and managing complex e-commerce sites and internal frameworks. Specializes in responsive design,
-
- and have a proven ability to handle various projects at the same time and complete them by given deadline. Designed run time algorithms and developed AI systems.
-Participated in navigation, vehicle control and decision making.
+                       <p class="about-text">I have extensive experience in designing, developing, and managing complex e-commerce sites and internal frameworks. My expertise lies in responsive design, and I have a proven track record of handling multiple projects 
+                           simultaneously and completing them within deadlines. I have designed runtime algorithms, developed AI systems, and participated in navigation, vehicle control, and decision-making processes.
                 </div>
      <br><br>
                 <div class="col-md-6 about-content">
                       <br>
                      <p class="about-text">
-                          Created AI frameworks and implemented AI components Mobile and web app. Suggested and executed navigation features for AI.
-                           Prepared and reviewed plans associated with next generation AI solutions. Lead the development of businesses cases for further project sales as determined by the practice. Drive the integrated value proposition and work with the client 
-                           to gain alignment and buy-in, Apply Accenture standard methods for performing strategy assessments and implementations, Work closely with leadership to set strategy and define success criteria for any project.
-                    </p>
+                         I have created AI frameworks and implemented AI components for both mobile and web applications. I have suggested and executed navigation features for AI, and prepared and reviewed plans for next-generation AI solutions. I have led the development of 
+                         business cases for further project sales, driving the integrated value proposition and working with clients to gain alignment and buy-in. I apply Accenture's standard methods for performing strategy assessments and implementations and work closely with 
+                         leadership to set strategy and define success criteria for projects.
+                     </p>
                   
                     <br>
                  
-                    <p class="about-text">Professional roles: Proficient in application designing, coding and troubleshooting:  C+, HTML5, CSS3/SASS, JavaScript(React JS, jQuery, TypeScript) Bootstrap, and including:  InVision, Sketch, Adobe Creative Cloud and user-centred design 
-to create unique
-                        Mobile Apps and Progressive Web Apps. Translation of wireframes and rapid prototyping tools to accurate, working code and Frameworks. Performance Testing, Load Testing & Debugging,
-                        Object-Oriented Programming. Agile Methodology & SCRUM, Content Management Systems (CMS). Experience of modern software engineering techniques e.g. Continuous Integration (CI), Version Control Systems (Subversion / Git, Code validation
-                        and quality analysis).
+                    <p class="about-text">In my professional roles, I am proficient in application design, coding, and troubleshooting with skills in C++, HTML5, CSS3/SASS, JavaScript (React JS, jQuery, TypeScript), and Bootstrap. I am also experienced with InVision, 
+                        Sketch, Adobe Creative Cloud, and user-centered design to create unique mobile apps and progressive web apps. I excel at translating wireframes and rapid prototyping tools into accurate, working code and frameworks. My technical skills include 
+                        performance testing, load testing, debugging, object-oriented programming, Agile methodology, SCRUM, and content management systems (CMS). I am also experienced in modern software engineering techniques such as Continuous Integration (CI), 
+                        version control systems (Subversion/Git), and code validation and quality analysis.
                     </p>
                     <p class="about-text"> </p>
                 </div>
