--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 
                         <div>
                             <i class="fa fa-phone"></i>
-                            <p>Directly: <a href="tel:+46(0)703637554">+46(0)703637554</a></p>
+                            <p>Directly: <a href="tel:+46(0)735314472">+46(0)730 000 000</a></p>
                         </div>
 
                     </div>
