--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                     <br><br>
                       <h2 class="about-title">Great services and ideas</h2>
                        <p class="about-text">I have extensive experience in designing, developing, and managing complex e-commerce sites and internal frameworks. My expertise lies in responsive design, and I have a proven track record of handling multiple projects 
-                           simultaneously and completing them within deadlines. I have designed runtime algorithms, developed AI systems, and participated in navigation, vehicle control, and decision-making processes.
+                           simultaneously and completing them within deadlines. In addition to my illustration expertise, I have immersed myself in the world of AI-driven design. I have successfully integrated tools such as Adobe Sensei and Figma's AI capabilities 
+                           into my workflow, allowing for more efficient project completion and higher quality outputs. My work with AI has not only enhanced my creative process but also enabled my team to leverage cutting-edge technology to stay ahead of industry trends.
+
                 </div>
      <br><br>
                 <div class="col-md-6 about-content">
