--- a/index.html
+++ b/index.html
@@ -106,25 +106,26 @@
                     <img src="img/about-img.jpg" alt="">
                     <br><br>
                       <h2 class="about-title">Great services and ideas</h2>
-                       <p class="about-text">I have extensive experience in designing, developing, and managing complex e-commerce sites and internal frameworks. My expertise lies in responsive design, and I have a proven track record of handling multiple projects 
-                           simultaneously and completing them within deadlines. In addition to my illustration expertise, I have immersed myself in the world of AI-driven design. I have successfully integrated tools such as Adobe Sensei and Figma's AI capabilities 
-                           into my workflow, allowing for more efficient project completion and higher quality outputs. My work with AI has not only enhanced my creative process but also enabled my team to leverage cutting-edge technology to stay ahead of industry trends.
-
+                       <p class="about-text">
+                           I have extensive experience in designing, developing, and managing complex e-commerce sites and internal frameworks. My expertise lies in responsive design, and I have a proven track record of handling multiple projects simultaneously and 
+                           completing them within deadlines. Beyond illustration, I have deeply engaged with AI-driven design, integrating tools like Adobe Sensei and Figma's AI capabilities into my workflow. This integration has led to more efficient project completion 
+                           and higher quality outputs, enhancing my creative process and allowing my team to leverage cutting-edge technology to stay ahead of industry trends.
+                       </p>
                 </div>
      <br><br>
                 <div class="col-md-6 about-content">
                       <br>
                      <p class="about-text">
-                         I have created AI frameworks and implemented AI components for both mobile and web applications. I have suggested and executed navigation features for AI, and prepared and reviewed plans for next-generation AI solutions. I have led the development of 
-                         business cases for further project sales, driving the integrated value proposition and working with clients to gain alignment and buy-in. I apply Accenture's standard methods for performing strategy assessments and implementations and work closely with 
-                         leadership to set strategy and define success criteria for projects.
+                        I have developed AI frameworks and implemented AI components for both mobile and web applications. My contributions include suggesting and executing navigation features for AI, preparing and reviewing plans for next-generation AI solutions, 
+                         and leading the development of business cases for further project sales. By driving the integrated value proposition and working closely with clients, I ensure alignment and buy-in for our AI initiatives. I apply Accenture's standard methods 
+                         for performing strategy assessments and implementations, collaborating with leadership to set strategy and define success criteria for projects.
                      </p>
                   
                     <br>
                  
-                    <p class="about-text">In my professional roles, I am proficient in application design, coding, and troubleshooting with skills in C++, HTML5, CSS3/SASS, JavaScript (React JS, jQuery, TypeScript), and Bootstrap. I am also experienced with InVision, 
-                        Sketch, Adobe Creative Cloud, and user-centered design to create unique mobile apps and progressive web apps. I excel at translating wireframes and rapid prototyping tools into accurate, working code and frameworks. My technical skills include 
-                        performance testing, load testing, debugging, object-oriented programming, Agile methodology, SCRUM, and content management systems (CMS). I am also experienced in modern software engineering techniques such as Continuous Integration (CI), 
+                    <p class="about-text">In my professional roles, I am proficient in application design, coding, and troubleshooting with skills in C++, HTML5, CSS3/SASS, JavaScript (React JS, jQuery, TypeScript), and Bootstrap. I am experienced with InVision, Sketch, 
+                        Adobe Creative Cloud, and user-centered design principles to create unique mobile apps and progressive web apps. I excel at translating wireframes and rapid prototyping tools into accurate, functional code and frameworks. My technical skills 
+                        encompass performance testing, load testing, debugging, object-oriented programming, Agile methodology, SCRUM, and content management systems (CMS). I am also adept in modern software engineering techniques such as Continuous Integration (CI),
                         version control systems (Subversion/Git), and code validation and quality analysis.
                     </p>
                     <p class="about-text"> </p>
