--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <div class="form">
                         <div id="sendmessage">Your message has been sent. Thank you!</div>
                         <div id="errormessage"></div>
-                        <form action="" method="post" role="form" class="contactForm">
+                        <form id="contactForm">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                 <div class="validation"></div>
@@ -494,6 +494,7 @@
                             </div>
                             <div class="text-center"><button type="submit">Send Message</button></div>
                         </form>
+                         <div id="confirmationMessage">Thank you for your message. We will get back to you soon.</div>
                     </div>
                 </div>
 
