--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 
     <link rel="stylesheet" href="stylelink.js">
 
+    <style>
+    #confirmationMessage {
+      display: none;
+      margin-top: 20px;
+      padding: 10px;
+      border: 1px solid #d4edda;
+      background-color: #d4edda;
+      color: #155724;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
+
     <!--
     Theme Name: Resume
     Author:Kaiser -->   
